<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scrollview_background"
    android:orientation="vertical">

    <include
        layout="@layout/layout_main_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip20">

            <ImageView
                android:id="@+id/iv_pound_list_pic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dip180"
                android:layout_marginLeft="@dimen/dip10"
                android:layout_marginRight="@dimen/dip10"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/upload_photo_bg" />

            <ImageView
                android:id="@+id/iv_take_photo"
                android:layout_width="@dimen/dip30"
                android:layout_height="@dimen/dip30"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/upload_photo" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dip10"
            android:text="@string/upload_pound_list" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip40"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dip20"
        android:orientation="horizontal"
        android:padding="@dimen/dip10">

        <TextView
            android:id="@+id/tv_cargo_suttle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cargo_suttle"
            android:textSize="@dimen/font14" />

        <TextView
            android:id="@+id/tv_red_cargo_suttle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/dip5"
            android:layout_toRightOf="@+id/tv_cargo_suttle"
            android:text="*"
            android:textColor="@color/red" />

        <EditText
            android:layout_toRightOf="@+id/tv_red_cargo_suttle"
            android:id="@+id/et_cargo_suttle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:inputType="number|numberDecimal"
            android:textSize="@dimen/font14"
            android:maxLength="7"
            android:hint="@string/hint_input_cargo_weight" />

    </RelativeLayout>

    <View
        android:visibility="visible"
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip1"
        android:background="@color/line_color"/>


    <Button
        android:layout_marginTop="@dimen/dip20"
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip40"
        android:layout_marginLeft="@dimen/dip15"
        android:layout_marginRight="@dimen/dip15"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/btn_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/font18" />

</LinearLayout>