<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="bottom">


        <LinearLayout
            android:id="@+id/pop_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_shape_white"
            android:orientation="vertical"
            android:paddingBottom="@dimen/app_normal_margin"
            android:paddingTop="@dimen/app_normal_margin">

            <TextView
                android:gravity="center"
                android:id="@+id/title"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_normal_margin"
                android:layout_marginLeft="@dimen/app_plus_margin"
                android:layout_marginRight="@dimen/app_plus_margin"
                android:textColor="@color/gray_font_dark"
                android:text="分享" />

            <LinearLayout
                android:padding="10dp"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/wechat_highlight"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <TextView
                        android:layout_marginTop="@dimen/dip5"
                        android:textSize="@dimen/dip12"
                        android:text="@string/wechat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/moments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/ic_share_moments"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <TextView
                        android:layout_marginTop="@dimen/dip5"
                        android:textSize="@dimen/dip12"
                        android:text="@string/moments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/qq_highlight"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <TextView
                        android:layout_marginTop="@dimen/dip5"
                        android:textSize="@dimen/dip12"
                        android:text="@string/qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/qzone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/ic_share_qzone"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                    <TextView
                        android:layout_marginTop="@dimen/dip5"
                        android:textSize="@dimen/dip12"
                        android:text="@string/qzone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/cancel"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/app_plus_margin"
            android:background="@drawable/background_gray_unselected_shape"
            android:textColor="@color/gray_font_dark"
            android:text="@android:string/cancel"
            android:textSize="@dimen/font_larger" />


</LinearLayout>