<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/psw_close"
                android:layout_width="30.0dip"
                android:layout_height="45.0dip"
                android:layout_gravity="right|center"
                android:layout_marginRight="15.0dip"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:scaleType="center"
                android:src="@mipmap/icon_close_btn"
                android:visibility="invisible" />

            <EditText
                android:textCursorDrawable="@drawable/shape_textcursor"
                android:id="@+id/phoneNember_et"
                android:layout_width="220dp"
                android:layout_height="45.0dip"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="30dp"
                android:background="@color/white"
                android:hint="@string/phone_hint"
                android:inputType="number"
                android:maxEms="11"
                android:maxLength="11"
                android:minEms="11"
                android:paddingLeft="13.0dip"
                android:paddingRight="13.0dip"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#c7c7c7"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="手机号"
                android:textColor="#333333"
                android:textSize="16sp" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/line_color" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dip45"
            android:layout_marginTop="@dimen/dip10">

            <ImageView
                android:id="@+id/iv_eye"
                android:layout_width="@dimen/dip45"
                android:layout_height="match_parent"
                android:layout_gravity="right|center"
                android:layout_marginRight="15.0dip"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@mipmap/icon_down" />

            <EditText
                android:textCursorDrawable="@drawable/shape_textcursor"
                android:id="@+id/et_pwd"
                android:layout_width="220dp"
                android:layout_height="45.0dip"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="30dp"
                android:background="@color/white"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:maxLength="11"
                android:paddingLeft="13.0dip"
                android:paddingRight="13.0dip"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#c7c7c7"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="    密码"
                android:textColor="#333333"
                android:textSize="16sp" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/line_color" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginTop="10dp">

            <EditText
                android:textCursorDrawable="@drawable/shape_textcursor"
                android:id="@+id/verification_code_et"
                android:layout_width="wrap_content"
                android:layout_height="45.0dip"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="50dp"
                android:background="@color/white"
                android:hint="@string/phone_hint1"
                android:inputType="number"
                android:maxLength="4"
                android:paddingLeft="@dimen/dip13"
                android:paddingRight="@dimen/dip13"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#c7c7c7"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="验证码"
                android:textColor="#333333"
                android:textSize="16sp" />

            <Button
                android:id="@+id/verification_code_btn"
                style="@style/SmsButton"
                android:layout_width="wrap_content"
                android:layout_height="45.0dp"
                android:layout_gravity="right|center"
                android:layout_marginRight="@dimen/dip15"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="获取验证码"
                android:textColor="#fff"
                android:textSize="16sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/line_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dip15"
            android:layout_marginRight="@dimen/dip15"
            android:layout_marginTop="@dimen/dip10">

            <CheckBox
                android:id="@+id/checkbox"
                style="@style/CustomCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:id="@+id/register_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dip5"
                android:layout_toRightOf="@+id/checkbox"
                android:textColor="@color/first_fargment_text_grays"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/next_btn"
        style="@style/SmsButton"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_below="@+id/ll_top"
        android:layout_marginLeft="20.5dp"
        android:layout_marginRight="20.5dp"
        android:layout_marginTop="@dimen/dip40"
        android:text="提     交"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dip10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="3"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dip10"
                android:layout_marginRight="@dimen/dip10"
                android:gravity="center"
                android:text="其他方式"
                android:textColor="@color/actionsheet_gray"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/line_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dip10"
            android:layout_marginTop="@dimen/dip20"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="@dimen/dip20"
                android:src="@mipmap/wechat_highlight" />

            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/dip20"
                android:src="@mipmap/qq_highlight" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>